force-app/main/default/objects/Test_Plan_Instance_Run_Junction__c/Test_Plan_Instance_Run_Junction__c.object-meta.xml
<CustomObject>
    <label>Test Plan Instance Run Junction</label>
    <nameField>
        <displayFormat>TPIR-{0000000}</displayFormat>
        <label>Test Plan Instance Run Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Instance Run Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>