force-app/main/default/objects/Test_Plan_Instance_Run_Junction__c/fields/Test_Plan_Case_Junction__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan_Case_Junction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Plan Case Junction</label>
    <referenceTo>Test_Plan_Case_Junction__c</referenceTo>
    <relationshipLabel>Test Plan Instance Run Junctions</relationshipLabel>
    <relationshipName>Test_Plan_Instance_Run_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>