force-app/main/default/objects/Test_Plan_Instance_Run_Junction__c/fields/Test_Plan_Instance__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan_Instance__c</fullName>
    <label>Test Plan Instance</label>
    <referenceTo>Test_Plan_Instance__c</referenceTo>
    <relationshipLabel>Test Plan Instance Run Junctions</relationshipLabel>
    <relationshipName>Test_Plan_Instance_Run_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>