force-app/main/default/objects/Test_Plan_Instance_Run_Junction__c/fields/Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Test_Run__c</fullName>
    <label>Test Run</label>
    <referenceTo>Test_Run__c</referenceTo>
    <relationshipLabel>Test Plan Instance Run Junctions</relationshipLabel>
    <relationshipName>Test_Plan_Instance_Run_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>